[gd_scene load_steps=19 format=2]

[ext_resource path="res://Telas/FundoTela1.png" type="Texture" id=1]
[ext_resource path="res://Fonte/NicoBold/NicoBold-Regular.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets2/IconsUI/contorno.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Bebidas/Bebidas1.png" type="Texture" id=4]
[ext_resource path="res://Sprites/CaixaPesada/CaixasPesadas1.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Soninho/Sprite-0001.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Celular/Celular1.png" type="Texture" id=7]
[ext_resource path="res://Assets2/IconsUI/seta_left_verde_sombra.png" type="Texture" id=8]
[ext_resource path="res://Assets2/IconsUI/seta_left_verde.png" type="Texture" id=9]
[ext_resource path="res://Assets2/IconsUI/ui_left.png" type="Texture" id=10]
[ext_resource path="res://Assets2/IconsUI/ui_down.png" type="Texture" id=11]
[ext_resource path="res://Assets2/IconsUI/ui_right.png" type="Texture" id=12]
[ext_resource path="res://Assets2/IconsUI/ui_up.png" type="Texture" id=13]
[ext_resource path="res://Cenas/Scripts/instrucoes.gd" type="Script" id=14]
[ext_resource path="res://Sons/voltar.wav" type="AudioStream" id=15]
[ext_resource path="res://Sons/hover.wav" type="AudioStream" id=16]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 14 )

[node name="FundoTela1" type="Sprite" parent="."]
position = Vector2( 627, 349 )
scale = Vector2( 0.7125, 0.696296 )
texture = ExtResource( 1 )

[node name="Contorno" type="Sprite" parent="."]
position = Vector2( 635, 326 )
scale = Vector2( 60.5, 30.5 )
texture = ExtResource( 3 )

[node name="INSTRUCOES" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 455.0
margin_top = 29.0
margin_right = 542.0
margin_bottom = 45.0
rect_scale = Vector2( 4, 4 )
custom_fonts/font = SubResource( 1 )
text = "Instruções"

[node name="BotaoVoltar" type="TextureButton" parent="."]
margin_left = 10.0
margin_top = 633.0
margin_right = 42.0
margin_bottom = 665.0
rect_scale = Vector2( 3, 3 )
texture_normal = ExtResource( 9 )
texture_hover = ExtResource( 8 )

[node name="UiUp" type="Sprite" parent="."]
position = Vector2( 579, 500 )
scale = Vector2( 2.1237, 1.85547 )
texture = ExtResource( 13 )

[node name="Keyboard71" type="Sprite" parent="."]
position = Vector2( 580, 574 )
scale = Vector2( 2.1224, 1.77344 )
texture = ExtResource( 11 )

[node name="Keyboard72" type="Sprite" parent="."]
position = Vector2( 672, 574 )
scale = Vector2( 2.1237, 1.85547 )
texture = ExtResource( 12 )

[node name="Keyboard73" type="Sprite" parent="."]
position = Vector2( 495, 572 )
scale = Vector2( 2.15625, 1.875 )
texture = ExtResource( 10 )

[node name="BOTOES" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 171.0
margin_top = 403.0
margin_right = 409.0
margin_bottom = 419.0
rect_scale = Vector2( 4, 4 )
custom_fonts/font = SubResource( 2 )
text = "Botões que serão utilizados:"

[node name="Celular1" type="Sprite" parent="."]
position = Vector2( 688, 152 )
scale = Vector2( 4.125, 4.375 )
texture = ExtResource( 7 )

[node name="CELULAR" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 262.0
margin_top = 117.0
margin_right = 528.0
margin_bottom = 171.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = SubResource( 1 )
text = "     Consumo de bebidas
Ao consumir bebidas a visão
do jogador ficam embaçada"

[node name="CaixasPesadas1" type="Sprite" parent="."]
position = Vector2( 196, 313 )
scale = Vector2( 4.21875, 4.3125 )
texture = ExtResource( 5 )

[node name="CARGAS" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 263.0
margin_top = 276.0
margin_right = 529.0
margin_bottom = 330.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = SubResource( 1 )
text = "      Cargas excessivas
cargas em excesso fazem o
caminhão derrapar na pista"

[node name="Bebidas1" type="Sprite" parent="."]
position = Vector2( 195, 157 )
scale = Vector2( 4.125, 4.34375 )
texture = ExtResource( 4 )

[node name="BEBIDAS" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 749.0
margin_top = 111.0
margin_right = 1015.0
margin_bottom = 184.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = SubResource( 1 )
text = "           Uso do celular
usar o celular faz com que o
motorista perca o controle 
            do caminhão"

[node name="sono" type="Sprite" parent="."]
position = Vector2( 685, 320 )
scale = Vector2( 4.1875, 4.35636 )
texture = ExtResource( 6 )

[node name="SONO" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 749.0
margin_top = 267.0
margin_right = 1015.0
margin_bottom = 340.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = SubResource( 1 )
text = "         Falta de descanso
O descanso é essencial. O sono
ocasiona fechamento dos olhos 
       involuntariamente"

[node name="SomVoltar" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
volume_db = -13.0

[node name="SomHover" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )
volume_db = -13.0

[connection signal="mouse_entered" from="BotaoVoltar" to="." method="_on_BotaoVoltar_mouse_entered"]
[connection signal="mouse_entered" from="BotaoVoltar" to="." method="_on_botoVoltar_mouse_entered"]
[connection signal="pressed" from="BotaoVoltar" to="." method="_on_BotaoVoltar_pressed"]
